# JPEG_compression

./: .gitignore  README.md  decoder.py  encoder.py  process.py  pyproject.toml
examples/output/: astronaut.legacy.jpc
scripts/: generate_channel_examples.py
src/jpeg_compression/: __init__.py  __main__.py  cli.py  decoder.py  encoder.py  huffman.py  utils.py
tests/: test_codec.py  test_huffman.py  test_utils.py
