[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "educational-jpeg-compression"
version = "1.0.0"
description = "A readable Python implementation of the core JPEG compression pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.23",
    "Pillow>=9.0",
    "scipy>=1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "ruff>=0.5",
]

[project.scripts]
jpeg-compression = "jpeg_compression.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
